--- a/App-Portal/public/index.html
+++ b/App-Portal/public/index.html
@@ -4,6 +4,9 @@
   <meta charset="utf-8">
   <link rel="shortcut icon" href="/favicon.ico">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+  <meta http-equiv='cache-control' content='no-cache'>
+  <meta http-equiv='expires' content='0'>
+  <meta http-equiv='pragma' content='no-cache'>
 
   <title>Career Portal</title>
   <!-- Bootstrap core CSS     -->
